k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
       app: frontend
    spec:
      imagePullSecrets:
       - name: acr-secret
      containers:
       - name: frontend
         image: acrdevops20261.azurecr.io/frontend:v5
         ports:
           - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
